remove container from all pages

--- a/src/app/modules/contests/pages/contest/contest.component.html
+++ b/src/app/modules/contests/pages/contest/contest.component.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="content-wrapper container-xxl p-0">
+<div class="content-wrapper p-0">
   <div class="content-body">
     <!-- content-header component -->
 
