--- a/src/app/modules/courses/sidebar/sidebar.component.html
+++ b/src/app/modules/courses/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       {{ 'COURSES.FILTER_COURSES' | translate }}
     </h4>
   </div>
-  <div class="middle-content container-xxl p-0">
+  <div class="middle-content p-0">
     <div class="widget-content">
       <div class="layout-spacing">
         <div class="container">
