--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -1,33 +1,47 @@
 <div class="content-wrapper p-0">
   <div class="content-body">
-    <!-- content-header component -->
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
 
     <section class="mt-2">
       <div class="row">
-
         <div class="col-12 attempts-table">
-
           <div class="form-group">
             <div class="custom-control custom-checkbox" *ngIf="currentUser">
-              <input type="checkbox" class="custom-control-input" [(ngModel)]="myAttempts"
-                (change)="loadPage(currentPage)" [ngModelOptions]="{standalone: true}" id="myAttempts" />
+              <input
+                type="checkbox"
+                class="custom-control-input"
+                [(ngModel)]="myAttempts"
+                (change)="_reloader.next()"
+                [ngModelOptions]="{standalone: true}" id="myAttempts" />
               <label class="custom-control-label" for="myAttempts">{{ 'MY_ATTEMPTS' | translate }}</label>
             </div>
           </div>
 
           <attempts-table *ngIf="attempts.length > 0" [attempts]="attempts"></attempts-table>
 
-          <ngb-pagination *ngIf="attempts.length > 0" [collectionSize]="totalAttemptsCount" [(page)]="currentPage"
-            [pageSize]="20" [maxSize]="5" (pageChange)="loadPage(currentPage)" aria-label="Default pagination"
+          <ngb-pagination
+            *ngIf="attempts.length > 0"
+            [collectionSize]="totalAttemptsCount"
+            [(page)]="currentPage"
+            [pageSize]="20" [maxSize]="5"
+            (pageChange)="_reloader.next()"
+            aria-label="Default pagination"
             class="d-flex justify-content-center mt-2">
-            <ng-template ngbPaginationPrevious><span [data-feather]="'chevron-left'" [size]="18"
-                [class]="'font-weight-bolder'"></span>
+            <ng-template ngbPaginationPrevious>
+              <span
+                [data-feather]="'chevron-left'"
+                [size]="18"
+                [class]="'font-weight-bolder'">
+              </span>
             </ng-template>
-            <ng-template ngbPaginationNext><span [data-feather]="'chevron-right'" [size]="18"
-                [class]="'font-weight-bolder'"></span></ng-template>
+            <ng-template ngbPaginationNext>
+              <span
+                [data-feather]="'chevron-right'"
+                [size]="18"
+                [class]="'font-weight-bolder'">
+              </span>
+            </ng-template>
           </ngb-pagination>
-
         </div>
       </div>
     </section>
