--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -17,7 +17,7 @@
             </div>
           </div>
 
-          <attempts-table *ngIf="attempts.length > 0" [attempts]="attempts"></attempts-table>
+          <attempts-table [attempts]="attempts"></attempts-table>
 
           <ngb-pagination
             *ngIf="attempts.length > 0"
