--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,7 +35,7 @@
   $name: 'yellow',
   $bg-color: rgb(191 200 0 / 94%),
   $bg-light-color: rgba(162, 232, 0, 0.12),
-  $color: #e8f400f0,
+  $color: #f5fd59,
   $box-shadow: 0px 0px 10px #e3e993,
 );
 
