fix kepcoin image src

--- a/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
+++ b/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
@@ -42,7 +42,7 @@
           <div class="media-body">
             <p class="media-heading text-white">
               {{ dailyTask.description }}
-              <img ngbTooltip="Kepcoin" height="19" src="assets/images/icons/kepcoin.png"> {{ dailyTask.kepcoin }}
+              <img ngbTooltip="Kepcoin" height="19" src="assets/images/icons/kepcoin.webp"> {{ dailyTask.kepcoin }}
             </p>
             <small class="notification-text">
               <span class="text-success" *ngIf="dailyTask.completed">
