--- a/src/app/layout/components/navbar/navbar-notification/navbar-notification.component.html
+++ b/src/app/layout/components/navbar/navbar-notification/navbar-notification.component.html
@@ -78,7 +78,7 @@
 
         <div class="media d-flex align-items-start" *ngSwitchCase="3">
           <div class="media-left text-dark">
-            <img height="30" src="assets/images/icons/kepcoin.png">
+            <img height="30" src="assets/images/icons/kepcoin.webp">
           </div>
           <div class="media-body">
             <p class="media-heading">
@@ -96,7 +96,7 @@
                   {{ 'MonthlyProblemsRatingWinner' | translate }}
                 </span>
               </span>
-              <img height="18" src="assets/images/icons/kepcoin.png"> {{ notification.content.kepcoin }}
+              <img height="18" src="assets/images/icons/kepcoin.webp"> {{ notification.content.kepcoin }}
             </p>
             <small class="notification-text">{{ notification.createdNaturaltime }}</small>
           </div>                
