--- a/src/app/modules/projects/project/project.component.html
+++ b/src/app/modules/projects/project/project.component.html
@@ -78,7 +78,7 @@
             >
               <button *ngIf="!project.purchased" class="btn shadow project-{{ project.id }} bg">
                 {{ 'Purchase' | translate }}
-                <img height="20" src="assets/images/icons/kepcoin.png">
+                <img height="20" src="assets/images/icons/kepcoin.webp">
                 {{ project.purchaseKepcoinValue }}
               </button>
             </kepcoin-spend-swal>
