--- a/src/app/modules/blog/post-detail/comments/comments.component.html
+++ b/src/app/modules/blog/post-detail/comments/comments.component.html
@@ -3,7 +3,13 @@
   <span class="comment-count">({{ comments.length }})</span>
 </h2>
 
-<div style="border-radius: 5px;" [ngClass]="{'bg-light-secondary': comment.username == currentUser?.username }" *ngFor="let comment of comments; index as i">
+<div
+  *ngFor="let comment of comments; index as i"
+  [@fadeInOnEnter]
+  [@fadeOutOnLeave]
+  style="border-radius: 5px;"
+  [ngClass]="{'bg-light-secondary': comment.username == currentUser?.username }"
+>
   <div class="media pt-1 mb-4 pl-1">
     <img class="rounded" [src]="comment.userAvatar" alt="pic1">
     <div class="media-body">
@@ -31,7 +37,7 @@
         >
           <i data-feather="message-square"></i>
         </button>
-        <button *ngIf="currentUser.isSuperuser" class="btn btn-sm round btn-relief-dark">
+        <button *ngIf="currentUser?.isSuperuser" (click)="deleteComment(i)" class="btn btn-sm round btn-relief-dark">
           <i data-feather="x"></i>
         </button>
       </div>
