change colors | challenges

--- a/src/app/modules/challenges/challenge-call-card/challenge-call-card.component.scss
+++ b/src/app/modules/challenges/challenge-call-card/challenge-call-card.component.scss
@@ -1,6 +1,7 @@
 .bg-challenge-call {
-  background: #86BBF6 !important;
-  box-shadow: 0 0 10px #5DA2EE !important;
+  background: transparent;
+  // background: #86BBF6 !important;
+  box-shadow: 0 0 5px #fff !important;
   border: none;
 }
 
