--- a/src/app/modules/challenges/challenge-card/challenge-card.component.html
+++ b/src/app/modules/challenges/challenge-card/challenge-card.component.html
@@ -1,4 +1,4 @@
-<div class="table-responsive bg-light-info">
+<div class="table-responsive">
   <table class="table bg-challenge">
     <tbody>
       <tr>
