--- a/src/app/modules/challenges/challenge-card/challenge-card.component.scss
+++ b/src/app/modules/challenges/challenge-card/challenge-card.component.scss
@@ -1,6 +1,7 @@
 .bg-challenge {
   box-shadow: var(--box-shadow) !important;
   border-radius: 5px;
+  background: linear-gradient(294deg, #c296f4c4, 30%, #97c8ff);
 }
 
 ::ng-deep .dark-layout .bg-challenge {
