--- a/src/app/modules/challenges/challenges.component.html
+++ b/src/app/modules/challenges/challenges.component.html
@@ -6,19 +6,19 @@
 
       <div class="mb-lg-3 mb-2 mt-2">
         <div class="text-center">
-          <div [@fadeInUpOnEnter] class="avatar mr-2 avatar-lg bg-primary badge-glow">
+          <div [@fadeInUpOnEnter] class="avatar mr-2 avatar-lg">
             <div class="avatar-content" ngbTooltip="{{ 'Challenges' | translate }}">
               <i class="font-medium-3" data-feather="zap"></i>
             </div>
           </div>
       
-          <div [@fadeInUpOnEnter] class="avatar mr-2 avatar-lg bg-primary">
+          <div [@fadeInUpOnEnter] class="avatar mr-2 avatar-lg">
             <div class="avatar-content" ngbTooltip="{{ 'Profile' | translate }}">
               <i class="font-medium-3" data-feather="bar-chart-2"></i>
             </div>
           </div>
       
-          <div [@fadeInUpOnEnter] class="avatar avatar-lg bg-primary">
+          <div [@fadeInUpOnEnter] class="avatar avatar-lg">
             <div class="avatar-content" ngbTooltip="{{ 'Rating' | translate }}">
               <i class="font-medium-3" data-feather="bar-chart"></i>
             </div>
@@ -171,9 +171,9 @@
           'mt-lg-2 pt-lg-75': currentUser,
           'mt-lg-0': !currentUser
         }">
-          <div class="card top-rating bg-light-info">
+          <div class="card top-rating">
             <div class="card-header d-flex justify-content-start">
-              <div class="avatar bg-info badge-glow p-50 m-0">
+              <div class="avatar badge-glow p-50 m-0">
                 <div class="avatar-content">
                   <i data-feather="award" class="font-medium-5"></i>
                 </div>
