--- a/src/app/modules/challenges/challenges.component.scss
+++ b/src/app/modules/challenges/challenges.component.scss
@@ -14,6 +14,15 @@ section.challenges {
   --bg: #1a3567;
 }
 
+.avatar-lg {
+  background: #5c8ec8a2;
+  box-shadow: var(--box-shadow);
+}
+
+::ng-deep .dark-layout .challenges .avatar-lg {
+  background: #1a3567;
+}
+
 .challenges-page-top {
   margin-left: -2rem;
   position: absolute;
@@ -75,9 +84,11 @@ section.challenges {
 .card.top-rating {
   border: none;
   box-shadow: var(--box-shadow) !important;
-  background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img) !important;
+  background: #7fbbffa2;;
 
   .avatar {
+    background: #5e7db5 !important;
+    box-shadow: 0 0 5px #5e7db5;
   }
 
   thead tr {
