--- a/src/app/modules/contests/elements/contest-card/contest-card-big/contest-card-big.component.scss
+++ b/src/app/modules/contests/elements/contest-card/contest-card-big/contest-card-big.component.scss
@@ -130,6 +130,16 @@
     --bg-gradient: linear-gradient(-45deg, #b2010ac4, 50%, rgba(190, 18, 27, 0.719));
   }
 
+  &[class*="Hack"][class*="it"] {
+    --bg: #524180;
+    --box-shadow: 0 0 5px #524180;
+    --bg-gradient: linear-gradient(-45deg, #645294, 50%, #453572);
+
+    .card-bg {
+      zoom: 70% !important;
+    }
+  }
+
   &[class*="SQL"]{
     --bg: #e19327;
     --box-shadow: 0 0 5px #e39425;
@@ -217,6 +227,10 @@
     --bg: #b0b5b6;
     --box-shadow: 0px 0px 5px #b0b5b6;
     --text-color: #fff;
+  }
+
+  &[class*="Hack"][class*="it"] {
+    --bg-gradient: linear-gradient(-45deg, #524180c0, 50%, #524180da);
   }
 
   &[class*="Uzinfocom"]{
