refactoring news card

--- a/src/app/shared/components/blog-post-card/news-card/news-card.component.html
+++ b/src/app/shared/components/blog-post-card/news-card/news-card.component.html
@@ -1,4 +1,4 @@
-<div [routerLink]="['/learn', 'blog', 'post', blog.id]" class="news-card">
+<a [routerLink]="['/learn', 'blog', 'post', blog.id]" class="news-card">
   <div class="post-image">
     <img [src]="blog.image" alt="">
   </div>
@@ -27,4 +27,4 @@
       </div>
     </div>
   </div>
-</div>
+</a>
