--- a/src/app/languages.scss
+++ b/src/app/languages.scss
@@ -101,3 +101,10 @@
   $background: linear-gradient(45deg, #d1d5d8, #fafbfc),
   $box-shadow: 0px 0px 10px #4c4d4d
 );
+
+@include define-badge-lang(
+  $name: 'rs',
+  $color: #000,
+  $background: linear-gradient(45deg, #9e9e9e, #767676),
+  $box-shadow: 0px 0px 10px #4c4d4d
+);
