--- a/src/app/modules/arena/arena.component.html
+++ b/src/app/modules/arena/arena.component.html
@@ -16,14 +16,14 @@
           <div [@fadeInLeftOnEnter] class="col-6">
             <a routerLink="/learn/blog/post/72">
               <img class="info-img" src="assets/images/pages/graphic-5.png" alt="">
-              <h4 class="mt-2 text-white">Arena haqida</h4>
+              <h4 class="mt-2 text-white">{{ 'AboutArena' | translate }}</h4>
             </a>
           </div>
 
           <div [@fadeInRightOnEnter] class="col-6">
             <a routerLink="/learn/blog/post/69">
               <img class="info-img" src="assets/images/pages/graphic-1.png" alt="">
-              <h4 class="mt-2 text-white">Bellashuvlar haqida</h4>
+              <h4 class="mt-2 text-white">{{ 'AboutChallenges' | translate }}</h4>
             </a>
           </div>
         </div>
