challenge answer check i18n add & gradient

--- a/src/app/modules/challenges/pages/challenge/challenge.component.html
+++ b/src/app/modules/challenges/pages/challenge/challenge.component.html
@@ -186,7 +186,7 @@
       </div>
 
       <div class="col-lg-3 col-md-3 col-sm-12">
-        <div class="card countdown">
+        <div class="card countdown bg-gradient-chapter-{{ challenge?.nextQuestion.question.chapterId }}">
           <div class="card-body">
             <ngx-countdown
               #counter
