--- a/src/app/modules/challenges/pages/challenges/challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges/challenges.component.html
@@ -38,7 +38,7 @@
                     </div>
                   </div>
                   <div class="info-img">
-                    <img src="../../../../../assets/images/pages/graphic-1.png" alt="info-img">
+                    <img src="assets/images/pages/graphic-1.png" alt="info-img">
                   </div>
                 </a>
               </div>
@@ -51,7 +51,7 @@
                     </div>
                   </div>
                   <div class="info-img">
-                    <img src="../../../../../assets/images/pages/graphic-4.png" alt="info-img">
+                    <img src="assets/images/pages/graphic-4.png" alt="info-img">
                   </div>
                 </a>
               </div>
