--- a/src/app/modules/arena/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/arena-tournament/arena-tournament.component.html
@@ -178,7 +178,7 @@
           <div class="col-12" *ngIf="arena.status != 1">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-12" *ngFor="let challenge of arenaChallenges">
-                <div class="table-responsive challenge-results">
+                <div class="table-responsive challenge-results mb-1">
                   <table class="table">
                     <tbody>
                       <tr>
