--- a/src/app/modules/landing-page/slides/slide-competitions/slide-competitions.component.html
+++ b/src/app/modules/landing-page/slides/slide-competitions/slide-competitions.component.html
@@ -1,6 +1,6 @@
 <div class="text-center slide-competitions">
   <div class="img">
-    <img [@fadeInRight]="animationState" src="../../../../../assets/images/pages/500.png" alt="learn">
+    <img [@fadeInRight]="animationState" src="assets/images/pages/500.png" alt="learn">
   </div>
 
   <div [@fadeInLeft]="animationState" class="top-text text-center">
