--- a/src/app/modules/landing-page/slides/slide-learn/slide-learn.component.html
+++ b/src/app/modules/landing-page/slides/slide-learn/slide-learn.component.html
@@ -1,6 +1,6 @@
 <div class="text-center slide-learn">
     <div class="img">
-      <img [@fadeInRight]="animationState" src="../../../../../assets/images/illustration/pricing-Illustration.svg" alt="learn">
+      <img [@fadeInRight]="animationState" src="assets/images/illustration/pricing-Illustration.svg" alt="learn">
     </div>
     
     <div [@fadeInLeft]="animationState" class="learn-text text-center">
