--- a/src/app/modules/landing-page/slides/slide-practice/slide-practice.component.html
+++ b/src/app/modules/landing-page/slides/slide-practice/slide-practice.component.html
@@ -1,6 +1,6 @@
 <div class="slide-practice">
   <div class="img">
-    <img alt="practice" [@fadeInLeft]="animationState" src="../../../../../assets/images/pages/graphic-6.png">
+    <img alt="practice" [@fadeInLeft]="animationState" src="assets/images/pages/graphic-6.png">
   </div>
 
   <div [@fadeInDown]="animationState" class="top-text">
