--- a/src/app/modules/challenges/pages/challenge/challenge.component.html
+++ b/src/app/modules/challenges/pages/challenge/challenge.component.html
@@ -382,10 +382,10 @@
 
 <audio
   #successAudio
-  src="../../../../../assets/audio/success.mp3">
+  src="assets/audio/success.mp3">
 </audio>
 
 <audio
   #wrongAudio
-  src="../../../../../assets/audio/wrong.mp3">
+  src="assets/audio/wrong.mp3">
 </audio>
