fix bug with links

--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -1,13 +1,13 @@
 <div class="col-12 landing-page" [style.height.px]="windowHeight">
   <div class="bg-img">
-    <img src="../../../assets/images/banner/banner.png" alt="img">
+    <img src="assets/images/banner/banner.png" alt="img">
   </div>
 
   <div class="navbar">
     <div class="navbar-container">
       <div class="inner">
         <div class="navbar-left" [@fadeInLeft]="startAnimationState">
-          <img height="32" src="../../../assets/images/logo/logo.svg" alt="logo">
+          <img height="32" src="assets/images/logo/logo.svg" alt="logo">
           <h2 class="font-weight-bolder text-primary ml-1">{{ appName }}</h2>
         </div>
 
