--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -47,7 +47,7 @@
                   <div class="col problem-header">
                     <small class="text-center">
                       <span class="badge badge-pill badge-{{ selectedLang }}">
-                        {{ availableLang.langFull }}
+                        {{ availableLang?.langFull }}
                       </span>      
                     </small>
                   </div>
@@ -62,7 +62,7 @@
 
                   <div class="col problem-header">
                     <span class="badge-pill badge-info badge">
-                      {{ availableLang.timeLimit || problem.timeLimit }} {{ 'MS' | translate }}
+                      {{ availableLang?.timeLimit || problem?.timeLimit }} {{ 'MS' | translate }}
                     </span>
                   </div>
                 </div>
@@ -76,12 +76,12 @@
 
                   <div class="col problem-header">
                     <span class="badge badge-pill badge-primary">
-                      {{ availableLang.memoryLimit || problem.memoryLimit }} {{ 'MB' | translate }}
+                      {{ availableLang?.memoryLimit || problem?.memoryLimit }} {{ 'MB' | translate }}
                     </span>
                   </div>
                 </div>
 
-                <div *ngIf="availableLang.codeGolf && contest.type == 'CodeGolf'" class="row justify-content-center mt-1">
+                <div *ngIf="availableLang?.codeGolf && contest.type == 'CodeGolf'" class="row justify-content-center mt-1">
                   <div class="col text-right problem-header">
                     <small class="text-center pr-1">
                       Code Golf:
@@ -91,7 +91,7 @@
                   <div class="col problem-header">
                     <small class="text-center">
                       <span class="badge badge-primary badge-pill">
-                        {{ availableLang.codeGolf }}
+                        {{ availableLang?.codeGolf }}
                       </span>
                     </small>
                   </div>
