--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -199,7 +199,7 @@
       </div>
 
       <code-editor-modal
-        *ngIf="contest?.isAlready() && contest?.isRegistered && currentUser"
+        *ngIf="contest?.isAlready() && contest?.userInfo.isRegistered && currentUser"
         [uniqueName]="'contest-problem-' + problem.id"
         [sampleTests]="problem.sampleTests"
         [availableLanguages]="problem.availableLanguages"
